CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(funwithc)

#Sends the -std=c99 flag to the gcc compiler
ADD_DEFINITIONS(-std=c99)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(fwc_stdlib)
#ADD_SUBDIRECTORY(locks)
ADD_SUBDIRECTORY(th-stor)

